fix z-index next btn

--- a/src/components/GlobalStyles.scss
+++ b/src/components/GlobalStyles.scss
@@ -79,6 +79,7 @@ a[href] {
 
 .slick-next {
     height: 80px;
+    z-index: 10;
 }
 
 .slick-next::before {
